--- a/_notes/2018-04-01-gems.md
+++ b/_notes/2018-04-01-gems.md
@@ -7,6 +7,12 @@ Making a Command Line Interface as a Ruby Gem
 How to Give Your Ruby Gem a CLI
 Making Ruby Gems Accessible via Command Line Interface
 
+-------
+Making a Command-line Ruby Gem - Write, Build, and Push
+-------
+
+Anyone who has used Ruby before knows that gems are the spice of life. They are easy to install and distribute, even easier to use, and most importantly, they provide useful functionality. It's not uncommon to see entire software projects centered around a single well-made gem. Just about any Ruby on Rails project does just that!
+
 Gems are the way Ruby code is packaged up and distributed to people everywhere for easy reuse. It's easy to make your first gem, and even easier to reuse someone else's! Thousands upon thousands of gems are available on [RubyGems.org](http://www.rubygems.org), packaged and ready to solve your problems.
 
 In this article, we're going to do two things. First, we're going to get started by creating our first gem and pushing it to RubyGems so that everyone can use it. Then, we're going to modify the gem so that you can use it anywhere on your computer, just by typing its name into the console. Sweet!
@@ -106,20 +112,76 @@ In order to make this gem available under a specific command, we'll have to crea
 
 The executable will basically be a short Ruby script that accepts command line arguments and routes them to the gem's code in `./lib`.
 
-```
+Create a directory to hold the binary file with `mkdir bin` and edit the `bin/pagekey` file:
 
 ```
-
-After writing the executable, we need to specify it in our `.gemspec` so that it will be added to the system PATH variable when the gem is installed.
-
+#!/usr/bin/env ruby
+require 'pagekey'
+PageKey::hello_world
 ```
 
+Ensure that the file is executable with `chmod +x bin/pagekey`. After writing the executable, we need to specify it in our `.gemspec` so that it will be added to the system PATH variable when the gem is installed. Add the following line:
+
 ```
+  s.executables = ['pagekey']
+```
+
+Now, the gem will look in the `bin` directory for the `pagekey` executable.
 
 # Pushing and Publishing
 
 There you have it. A beautiful gem, ready to go. But, until it's in the open air, I daresay it's nothing but a diamond in the rough. Let's get this thing in out there in the real world.
 
-To begin, we'll
+Make sure that you build your gem as described above with `gem build pagekey.gemspec`. Then, make sure you have an account at [rubygems.org](http://www.rubygems.org). Replace `USERNAME` with your rubygems username in the following snippet, and run it:
+
+```
+curl -u USERNAME https://rubygems.org/api/v1/api_key.yaml >
+~/.gem/credentials; chmod 0600 ~/.gem/credentials
+```
+
+This will set up your system with the proper credentials to publish gems to your RubyGems account. The final step is very simple: Just push it!
+
+```
+gem push pagekey-0.0.0.gem
+```
+
+The gem will upload, and it will become available for the world to see and download!
+
+# Bonus: Useful Rake Automation
+
+One more tool that may be helpful as you be into the flow of gem development is `rake`, which allows you to automate processes using the Ruby language. In the base directory for your gem, add a `Rakefile` and add your own scripts. I've included an example that proved very helpful as I persued my own little gem project:
+
+{% highlight ruby %}
+GEM_NAME = "pagekey"
+GEM_VERSION = "0.0.0"
+
+task :default => :build
+
+task :build do
+  system "gem build " + GEM_NAME + ".gemspec"
+end
+
+task :install => :build do
+  system "gem install " + GEM_NAME + "-" + GEM_VERSION + ".gem"
+end
+
+task :publish => :build do
+  system 'gem push ' + GEM_NAME + "-" + GEM_VERSION + ".gem"
+end
+
+task :clean do
+  system "rm *.gem"
+end
+{% endhighlight %}
+
+The build command just builds the gem for you. The install command builds the gem and installs it, so that you can `require` it and try it out. The publish command also builds the gem, but it takes care of publishing the gem for you.
+
+The arrow indicates a dependency of tasks. For example, `task :install => :build` indicates that `:install` depends on `:build`, and so every time that `rake install` is run, the commands under the `:build` task will be run **before** anything else.
+
+This `Rakefile` relies heavily on the `system` command, whcih means that it is OS specific. All of these tasks can likely be performed in pure Ruby, but I found it much easier, especially for simple, small projects, to write everything as a `system` command.
+
+One way to greatly improve this `Rakefile` (I'll leave it as a challenge) is to reference the GEM_VERSION in only one place within the application. Right now, you'd have to update the `.gemspec` file *and* your `Rakefile` if you wanted to change the version from `0.0.0` to `0.0.1`. This is not ideal. Since everything is written in Ruby, you would be able to `require` a configuration file that contains the version as a variable, and use that. Perhaps it would also be helpful to include a task in your `Rakefile` called `:increment`, which updates your gem version by incrementing the last number (moving `0.0.0` to `0.0.1` automatically).
 
 # Wrapping Up
+
+Thanks for reading. I hope this article will help you get started writing your first Ruby gem, so that you can contribute to the large and impressive open-source Ruby community. Best of luck!
