--- a/_posts/2018-04-16-ssh-keys.md
+++ b/_posts/2018-04-16-ssh-keys.md
@@ -3,7 +3,7 @@ layout: post
 title: Push Out Your SSH Keys - Jump Nodes in a Jiffy!
 keywords: system administration, ssh, sshd, keys, cryptography, public key, private key, tutorial, learning, education, how to
 author: stephengrice
-categories: Linux
+categories: ['Linux']
 ---
 
 Every day, system administrators, students, professors, and everyday computer users struggle with entering their password on the command line. With each passing jump from one system to another, ten seconds tick by. Whoops, that's a mistake - make it 30!
