Move PKOS blog posts over to /docs

--- a/docs/pkos/007.md
+++ b/docs/pkos/007.md
@@ -1,8 +1,6 @@
 ---
-title: "OS7: Making the Jump"
-date: "2020-03-11"
-authors: [steve]
-tags: [operating-systems]
+slug: os7
+title: "OS7: Protected Mode - Making the Jump!"
 ---
 
 <iframe className="youtube-video-player" src="https://www.youtube.com/embed/IU9zXYdYV9I" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
@@ -15,10 +13,6 @@ Here’s the awesome book I keep referencing:
 
 <https://www.cs.bham.ac.uk/~exr/lectures/opsys/10_11/lectures/os-dev.pdf>
 
-Notes for this video (and all others) are on the wiki:
-
-<https://github.com/stephengrice/pkos/wiki>
-
 Latest source can be found at the main repo:
 
-<https://github.com/stephengrice/pkos>
+<https://github.com/pagekeysolutions/pkos>
