--- a/docs/pkos/009.md
+++ b/docs/pkos/009.md
@@ -1,8 +1,8 @@
 ---
+slug: os9
 title: "OS9: Multiboot (Bootloader Breakup)"
 date: "2020-07-01"
 authors: [steve]
-tags: [operating-systems]
 ---
 
 <iframe className="youtube-video-player" src="https://www.youtube.com/embed/UraQLWvn9Vg" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
@@ -17,10 +17,6 @@ Special thanks to Petros Koutoupis for his awesome Linux Journal article. Please
 
 <https://www.linuxjournal.com/content/what-does-it-take-make-kernel-0>
 
-Notes for this video (and all others) are on the wiki:
-
-<https://github.com/stephengrice/pkos/wiki>
-
 Latest source can be found at the main repo:
 
-<https://github.com/stephengrice/pkos>
+<https://github.com/pagekeysolutions/pkos>
