--- a/docs/pkos/011.md
+++ b/docs/pkos/011.md
@@ -1,8 +1,8 @@
 ---
+slug: os11
 title: "OS11: Calling Assembly from C"
 date: "2020-07-29"
 authors: [steve]
-tags: [operating-systems]
 ---
 
 <iframe className="youtube-video-player" src="https://www.youtube.com/embed/ZsnKjqsFwwY" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
@@ -11,10 +11,6 @@ Join us in this video to find out how we can call a function in assembly from ou
 
 <!--truncate-->
 
-Notes for this video (and all others) are on the wiki:
-
-<https://github.com/stephengrice/pkos/wiki>
-
 Latest source can be found at the main repo:
 
-<https://github.com/stephengrice/pkos>
+<https://github.com/pagekeysolutions/pkos>
