--- a/docs/pkos/003.md
+++ b/docs/pkos/003.md
@@ -1,8 +1,8 @@
 ---
+slug: os3
 title: "OS3: Hone the Power of the BIOS!"
 date: "2020-01-15"
 authors: [steve]
-tags: [operating-systems]
 ---
 
 <iframe className="youtube-video-player" src="https://www.youtube.com/embed/W3DdyiO3Fy8" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
@@ -13,7 +13,7 @@ We delve into and modify the example code, I explain a few assembly concepts, an
 
 Here’s the source code repository (AND the solutions to the challenges):
 
-<https://github.com/stephengrice/education/tree/master/OS>
+<https://github.com/pagekeysolutions/education/tree/master/OS>
 
 Here is the link to the Ralph Brown’s Interrupt List download:
 
@@ -25,4 +25,4 @@ Notes for this video (and all others) are on the wiki:
 
 Latest source can be found at the main repo:
 
-<https://github.com/stephengrice/pkos>
+<https://github.com/pagekeysolutions/pkos>
