--- a/docs/pkos/006.md
+++ b/docs/pkos/006.md
@@ -1,8 +1,8 @@
 ---
+slug: os6
 title: "OS6: Reading the Disk"
 date: "2020-02-26"
 authors: [steve]
-tags: [operating-systems]
 ---
 
 <iframe className="youtube-video-player" src="https://www.youtube.com/embed/mktENQzbm6k" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
@@ -13,10 +13,6 @@ Watch 'til the end for a bonus bugfix :-)
 
 <!--truncate-->
 
-Notes for this video (and all others) are on the wiki:
-
-<https://github.com/stephengrice/pkos/wiki>
-
 Latest source can be found at the main repo:
 
-<https://github.com/stephengrice/pkos>
+<https://github.com/pagekeysolutions/pkos>
