--- a/docs/pkos/008.md
+++ b/docs/pkos/008.md
@@ -1,8 +1,8 @@
 ---
-title: "OS8: C at Last!"
+slug: os8
+title: "OS8: Calling C from Assembly"
 date: "2020-06-17"
 authors: [steve]
-tags: [operating-systems]
 ---
 
 <iframe className="youtube-video-player" src="https://www.youtube.com/embed/5RWjI83C47k" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
@@ -11,10 +11,6 @@ In this video, we run our first miniature kernel, written in C.
 
 <!--truncate-->
 
-Notes for this video (and all others) are on the wiki:
-
-<https://github.com/stephengrice/pkos/wiki>
-
 Latest source can be found at the main repo:
 
-<https://github.com/stephengrice/pkos>
+<https://github.com/pagekeysolutions/pkos>
