--- a/docs/pkos/012.md
+++ b/docs/pkos/012.md
@@ -1,8 +1,8 @@
 ---
+slug: os12
 title: "OS12: Basic Keyboard Driver (x86 Interrupts)"
 date: "2020-08-12"
 authors: [steve]
-tags: [operating-systems]
 ---
 
 <iframe className="youtube-video-player" src="https://www.youtube.com/embed/YtnNX074jMU" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
@@ -25,10 +25,6 @@ In this video, we learn about interrupts and write our own basic keyboard driver
 
 29:06 GDB debugging skills; making the keyboard map from scratch
 
-Notes for this video (and all others) are on the wiki:
-
-<https://github.com/stephengrice/pkos/wiki>
-
 Latest source can be found at the main repo:
 
-<https://github.com/stephengrice/pkos>
+<https://github.com/pagekeysolutions/pkos>
