Org notes for all OS vids

--- a/docs/pkos/003.md
+++ b/docs/pkos/003.md
@@ -11,6 +11,8 @@ We delve into and modify the example code, I explain a few assembly concepts, an
 
 <!--truncate-->
 
+## Notes
+
 Here’s the source code repository (AND the solutions to the challenges):
 
 <https://github.com/pagekeysolutions/education/tree/master/OS>
@@ -19,10 +21,7 @@ Here is the link to the Ralph Brown’s Interrupt List download:
 
 <http://www.cs.cmu.edu/~ralf/files.html>
 
-Notes for this video (and all others) are on the wiki:
+## Code
 
-<https://github.com/stephengrice/pkos/wiki>
-
-Latest source can be found at the main repo:
-
-<https://github.com/pagekeysolutions/pkos>
+- [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos003)
+- [Diff from previous video](https://github.com/pagekeysolutions/pkos/compare/vid/os002..vid/os003)
