--- a/docs/pkos/006.md
+++ b/docs/pkos/006.md
@@ -13,6 +13,7 @@ Watch 'til the end for a bonus bugfix :-)
 
 <!--truncate-->
 
-Latest source can be found at the main repo:
+## Code
 
-<https://github.com/pagekeysolutions/pkos>
+- [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos006)
+- [Diff from previous video](https://github.com/pagekeysolutions/pkos/compare/vid/os005..vid/os006)
