--- a/docs/pkos/008.md
+++ b/docs/pkos/008.md
@@ -11,6 +11,7 @@ In this video, we run our first miniature kernel, written in C.
 
 <!--truncate-->
 
-Latest source can be found at the main repo:
+## Code
 
-<https://github.com/pagekeysolutions/pkos>
+- [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos008)
+- [Diff from previous video](https://github.com/pagekeysolutions/pkos/compare/vid/os007..vid/os008)
