--- a/docs/pkos/010.md
+++ b/docs/pkos/010.md
@@ -11,6 +11,7 @@ Time for some real hardware! Let's load this OS up and try it out on an old lapt
 
 <!--truncate-->
 
-Latest source can be found at the main repo:
+## Code
 
-<https://github.com/pagekeysolutions/pkos>
+- [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos010)
+- [Diff from previous video](https://github.com/pagekeysolutions/pkos/compare/vid/os009..vid/os010)
