--- a/docs/pkos/011.md
+++ b/docs/pkos/011.md
@@ -11,6 +11,7 @@ Join us in this video to find out how we can call a function in assembly from ou
 
 <!--truncate-->
 
-Latest source can be found at the main repo:
+## Code
 
-<https://github.com/pagekeysolutions/pkos>
+- [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos011)
+- [Diff from previous video](https://github.com/pagekeysolutions/pkos/compare/vid/os010..vid/os011)
