--- a/docs/pkos/001.md
+++ b/docs/pkos/001.md
@@ -8,3 +8,7 @@ authors: [steve]
 <iframe className="youtube-video-player" src="https://www.youtube.com/embed/NtZzb9ZJ5Fo" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
 
 In this video, we'll set up VirtualBox and install a Debian VM so that we can use Linux on Windows.
+
+## Code
+
+- [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos001)
