--- a/docs/pkos/002.md
+++ b/docs/pkos/002.md
@@ -11,6 +11,8 @@ In this video, we install qemu and nasm so that we can build our first bootloade
 
 <!--truncate-->
 
+## Notes
+
 Command for getting the first bootloader code:
 
 ```bash
@@ -23,8 +25,13 @@ Command for getting the Makefile:
 wget https://raw.githubusercontent.com/pagekeysolutions/education/master/OS/video2/Makefile
 ```
 
-Sources:
+## Sources
 
 * <https://stackoverflow.com/questions/34268518/creating-a-bootable-iso-image-with-custom-bootloader>
 
 * <http://mikeos.sourceforge.net/write-your-own-os.html>
+
+## Code
+
+- [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos002)
+- [Diff from previous video](https://github.com/pagekeysolutions/pkos/compare/vid/os001..vid/os002)
