--- a/docs/pkos/004.md
+++ b/docs/pkos/004.md
@@ -11,6 +11,7 @@ Let's go over the challenges from the last video.
 
 <!--truncate-->
 
-Latest source can be found at the main repo:
+## Code
 
-<https://github.com/pagekeysolutions/pkos>
+- [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos004)
+- [Diff from previous video](https://github.com/pagekeysolutions/pkos/compare/vid/os003..vid/os004)
