--- a/docs/pkos/005.md
+++ b/docs/pkos/005.md
@@ -11,6 +11,7 @@ In this video, we go over the challenge program Print Hex using 16-bit assembly.
 
 <!--truncate-->
 
-Latest source can be found at the main repo:
+## Code
 
-<https://github.com/pagekeysolutions/pkos>
+- [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos005)
+- [Diff from previous video](https://github.com/pagekeysolutions/pkos/compare/vid/os004..vid/os005)
