--- a/docs/pkos/007.md
+++ b/docs/pkos/007.md
@@ -9,10 +9,13 @@ We really did it. We made the jump to 32-bit protected mode.
 
 <!--truncate-->
 
+## Notes
+
 Here’s the awesome book I keep referencing:
 
 <https://www.cs.bham.ac.uk/~exr/lectures/opsys/10_11/lectures/os-dev.pdf>
 
-Latest source can be found at the main repo:
+## Code
 
-<https://github.com/pagekeysolutions/pkos>
+- [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos007)
+- [Diff from previous video](https://github.com/pagekeysolutions/pkos/compare/vid/os006..vid/os007)
