--- a/docs/pkos/009.md
+++ b/docs/pkos/009.md
@@ -13,10 +13,13 @@ Don't worry, life without it is much better! :-)
 
 <!--truncate-->
 
+## Notes
+
 Special thanks to Petros Koutoupis for his awesome Linux Journal article. Please check it out at this link - it's a great read!
 
 <https://www.linuxjournal.com/content/what-does-it-take-make-kernel-0>
 
-Latest source can be found at the main repo:
+## Code
 
-<https://github.com/pagekeysolutions/pkos>
+- [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos009)
+- [Diff from previous video](https://github.com/pagekeysolutions/pkos/compare/vid/os008..vid/os009)
