--- a/docs/pkos/012.md
+++ b/docs/pkos/012.md
@@ -11,6 +11,8 @@ In this video, we learn about interrupts and write our own basic keyboard driver
 
 <!--truncate-->
 
+## Timestamps
+
 0:00 Lecture
 
 9:58 What we're building
@@ -25,6 +27,7 @@ In this video, we learn about interrupts and write our own basic keyboard driver
 
 29:06 GDB debugging skills; making the keyboard map from scratch
 
-Latest source can be found at the main repo:
+## Code
 
-<https://github.com/pagekeysolutions/pkos>
+- [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos012)
+- [Diff from previous video](https://github.com/pagekeysolutions/pkos/compare/vid/os011..vid/os012)
