Add blog post for everything in projects

--- a/docs/pkos/002.md
+++ b/docs/pkos/002.md
@@ -1,8 +1,6 @@
 ---
 slug: os2
 title: "OS2: First Bootloader"
-date: "2020-01-01"
-authors: [steve]
 ---
 
 <iframe className="youtube-video-player" src="https://www.youtube.com/embed/1lAuJoPZ3Q0" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
@@ -35,3 +33,5 @@ wget https://raw.githubusercontent.com/pagekeysolutions/education/master/OS/vide
 
 - [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos002)
 - [Diff from previous video](https://github.com/pagekeysolutions/pkos/compare/vid/os001..vid/os002)
+
+[Original blog post](/blog/pkos/2-first-bootloader)
