--- a/docs/pkos/003.md
+++ b/docs/pkos/003.md
@@ -1,8 +1,6 @@
 ---
 slug: os3
 title: "OS3: Hone the Power of the BIOS!"
-date: "2020-01-15"
-authors: [steve]
 ---
 
 <iframe className="youtube-video-player" src="https://www.youtube.com/embed/W3DdyiO3Fy8" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
@@ -25,3 +23,5 @@ Here is the link to the Ralph Brown’s Interrupt List download:
 
 - [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos003)
 - [Diff from previous video](https://github.com/pagekeysolutions/pkos/compare/vid/os002..vid/os003)
+
+[Original blog post](/blog/pkos/3-hone-power-bios)
