--- a/docs/pkos/007.md
+++ b/docs/pkos/007.md
@@ -19,3 +19,5 @@ Here’s the awesome book I keep referencing:
 
 - [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos007)
 - [Diff from previous video](https://github.com/pagekeysolutions/pkos/compare/vid/os006..vid/os007)
+
+[Original blog post](/blog/pkos/7-protected-mode)
