--- a/docs/pkos/009.md
+++ b/docs/pkos/009.md
@@ -1,8 +1,6 @@
 ---
 slug: os9
 title: "OS9: Multiboot (Bootloader Breakup)"
-date: "2020-07-01"
-authors: [steve]
 ---
 
 <iframe className="youtube-video-player" src="https://www.youtube.com/embed/UraQLWvn9Vg" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
@@ -23,3 +21,5 @@ Special thanks to Petros Koutoupis for his awesome Linux Journal article. Please
 
 - [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos009)
 - [Diff from previous video](https://github.com/pagekeysolutions/pkos/compare/vid/os008..vid/os009)
+
+[Original blog post](/blog/pkos/9-multiboot)
