--- a/docs/pkos/012.md
+++ b/docs/pkos/012.md
@@ -1,8 +1,6 @@
 ---
 slug: os12
 title: "OS12: Basic Keyboard Driver (x86 Interrupts)"
-date: "2020-08-12"
-authors: [steve]
 ---
 
 <iframe className="youtube-video-player" src="https://www.youtube.com/embed/YtnNX074jMU" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
@@ -31,3 +29,5 @@ In this video, we learn about interrupts and write our own basic keyboard driver
 
 - [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos012)
 - [Diff from previous video](https://github.com/pagekeysolutions/pkos/compare/vid/os011..vid/os012)
+
+[Original blog post](/blog/pkos/12-basic-keyboard-driver)
