Resolve "Add recent posts to homepage"

--- a/projects/pkos/002.md
+++ b/projects/pkos/002.md
@@ -1,9 +1,12 @@
 ---
-slug: os2
+slug: 2
 title: "OS2: First Bootloader"
+youtube: 1lAuJoPZ3Q0
 ---
 
-<iframe className="youtube-video-player" src="https://www.youtube.com/embed/1lAuJoPZ3Q0" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
+import YouTubePlayer from '@site/src/components/YouTubePlayer';
+
+<YouTubePlayer youtubeLink={frontMatter.youtube} />
 
 In this video, we install qemu and nasm so that we can build our first bootloader and run it.
 
