--- a/projects/pkos/003.md
+++ b/projects/pkos/003.md
@@ -1,9 +1,12 @@
 ---
-slug: os3
+slug: 3
 title: "OS3: Hone the Power of the BIOS!"
+youtube: W3DdyiO3Fy8
 ---
 
-<iframe className="youtube-video-player" src="https://www.youtube.com/embed/W3DdyiO3Fy8" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
+import YouTubePlayer from '@site/src/components/YouTubePlayer';
+
+<YouTubePlayer youtubeLink={frontMatter.youtube} />
 
 We delve into and modify the example code, I explain a few assembly concepts, and I give you some challenges!
 
