--- a/projects/pkos/004.md
+++ b/projects/pkos/004.md
@@ -1,9 +1,12 @@
 ---
-slug: os4
+slug: 4
 title: "OS4: Deciphering BIOS Challenges"
+youtube: 9dU7CyKkHew
 ---
 
-<iframe className="youtube-video-player" src="https://www.youtube.com/embed/9dU7CyKkHew" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
+import YouTubePlayer from '@site/src/components/YouTubePlayer';
+
+<YouTubePlayer youtubeLink={frontMatter.youtube} />
 
 Let's go over the challenges from the last video.
 
