--- a/projects/pkos/006.md
+++ b/projects/pkos/006.md
@@ -1,9 +1,12 @@
 ---
-slug: os6
+slug: 6
 title: "OS6: Reading the Disk"
+youtube: mktENQzbm6k
 ---
 
-<iframe className="youtube-video-player" src="https://www.youtube.com/embed/mktENQzbm6k" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
+import YouTubePlayer from '@site/src/components/YouTubePlayer';
+
+<YouTubePlayer youtubeLink={frontMatter.youtube} />
 
 How do we read the disk? We better find out before we go into protected mode!
 
