--- a/projects/pkos/008.md
+++ b/projects/pkos/008.md
@@ -1,9 +1,12 @@
 ---
-slug: os8
+slug: 8
 title: "OS8: Calling C from Assembly"
+youtube: 5RWjI83C47k
 ---
 
-<iframe className="youtube-video-player" src="https://www.youtube.com/embed/5RWjI83C47k" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
+import YouTubePlayer from '@site/src/components/YouTubePlayer';
+
+<YouTubePlayer youtubeLink={frontMatter.youtube} />
 
 In this video, we run our first miniature kernel, written in C.
 
