--- a/projects/pkos/009.md
+++ b/projects/pkos/009.md
@@ -1,9 +1,12 @@
 ---
-slug: os9
+slug: 9
 title: "OS9: Multiboot (Bootloader Breakup)"
+youtube: UraQLWvn9Vg
 ---
 
-<iframe className="youtube-video-player" src="https://www.youtube.com/embed/UraQLWvn9Vg" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
+import YouTubePlayer from '@site/src/components/YouTubePlayer';
+
+<YouTubePlayer youtubeLink={frontMatter.youtube} />
 
 In this video, we break up with our old bootloader :-(
     
