--- a/projects/pkos/010.md
+++ b/projects/pkos/010.md
@@ -1,9 +1,12 @@
 ---
-slug: os10
+slug: 10
 title: "OS10: Running on Real Hardware"
+youtube: -V-eKSKwexs
 ---
 
-<iframe className="youtube-video-player" src="https://www.youtube.com/embed/-V-eKSKwexs" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
+import YouTubePlayer from '@site/src/components/YouTubePlayer';
+
+<YouTubePlayer youtubeLink={frontMatter.youtube} />
 
 Time for some real hardware! Let's load this OS up and try it out on an old laptop.
 
