--- a/projects/pkos/011.md
+++ b/projects/pkos/011.md
@@ -1,9 +1,12 @@
 ---
-slug: os11
+slug: 11
 title: "OS11: Calling Assembly from C"
+youtube: ZsnKjqsFwwY
 ---
 
-<iframe className="youtube-video-player" src="https://www.youtube.com/embed/ZsnKjqsFwwY" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
+import YouTubePlayer from '@site/src/components/YouTubePlayer';
+
+<YouTubePlayer youtubeLink={frontMatter.youtube} />
 
 Join us in this video to find out how we can call a function in assembly from our kernel in C. This will allow us to do things in raw assembly when needed, and then we can pop back to the comfortable world of C when finished!
 
