--- a/projects/pkos/014.md
+++ b/projects/pkos/014.md
@@ -1,9 +1,12 @@
 ---
-slug: os14
+slug: 14
 title: "OS14: Organizing Our OS Code"
+youtube: Qa-WjNWkNeA
 ---
 
-<iframe className="youtube-video-player" src="https://www.youtube.com/embed/Qa-WjNWkNeA" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
+import YouTubePlayer from '@site/src/components/YouTubePlayer';
+
+<YouTubePlayer youtubeLink={frontMatter.youtube} />
 
 In this video, we reorganize the entire project, taking it from cluttered to modular in less than 10 minutes.
 
