--- a/projects/pkos/001.md
+++ b/projects/pkos/001.md
@@ -1,9 +1,12 @@
 ---
-slug: os1
+slug: 1
 title: "OS1: Installation"
+youtube: NtZzb9ZJ5Fo
 ---
 
-<iframe className="youtube-video-player" src="https://www.youtube.com/embed/NtZzb9ZJ5Fo" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
+import YouTubePlayer from '@site/src/components/YouTubePlayer';
+
+<YouTubePlayer youtubeLink={frontMatter.youtube} />
 
 In this video, we'll set up VirtualBox and install a Debian VM so that we can use Linux on Windows.
 
