--- a/projects/pkos/005.md
+++ b/projects/pkos/005.md
@@ -1,9 +1,12 @@
 ---
-slug: os5
+slug: 5
 title: "OS5: Going Over print_hex"
+youtube: IvUl1ocS64g
 ---
 
-<iframe className="youtube-video-player" src="https://www.youtube.com/embed/IvUl1ocS64g" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
+import YouTubePlayer from '@site/src/components/YouTubePlayer';
+
+<YouTubePlayer youtubeLink={frontMatter.youtube} />
 
 In this video, we go over the challenge program Print Hex using 16-bit assembly.
 
