--- a/projects/pkos/007.md
+++ b/projects/pkos/007.md
@@ -1,9 +1,12 @@
 ---
-slug: os7
+slug: 7
 title: "OS7: Protected Mode - Making the Jump!"
+youtube: IU9zXYdYV9I
 ---
 
-<iframe className="youtube-video-player" src="https://www.youtube.com/embed/IU9zXYdYV9I" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
+import YouTubePlayer from '@site/src/components/YouTubePlayer';
+
+<YouTubePlayer youtubeLink={frontMatter.youtube} />
 
 We really did it. We made the jump to 32-bit protected mode.
 
