--- a/projects/pkos/012.md
+++ b/projects/pkos/012.md
@@ -1,9 +1,12 @@
 ---
-slug: os12
+slug: 12
 title: "OS12: Basic Keyboard Driver (x86 Interrupts)"
+youtube: YtnNX074jMU
 ---
 
-<iframe className="youtube-video-player" src="https://www.youtube.com/embed/YtnNX074jMU" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
+import YouTubePlayer from '@site/src/components/YouTubePlayer';
+
+<YouTubePlayer youtubeLink={frontMatter.youtube} />
 
 In this video, we learn about interrupts and write our own basic keyboard driver!
 
