--- a/projects/pkos/013.md
+++ b/projects/pkos/013.md
@@ -1,9 +1,12 @@
 ---
-slug: os13
+slug: 13
 title: "OS13: Docker Dev Environment"
+youtube: qN_24B2OJ5U
 ---
 
-<iframe className="youtube-video-player" src="https://www.youtube.com/embed/qN_24B2OJ5U" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowFullScreen></iframe>
+import YouTubePlayer from '@site/src/components/YouTubePlayer';
+
+<YouTubePlayer youtubeLink={frontMatter.youtube} />
 
 This video shows off our shiny new Docker development environment, and this new PageKey Solutions website!
 
