Perform some cleanup and add redirects

--- a/projects/pkos/015.md
+++ b/projects/pkos/015.md
@@ -14,10 +14,6 @@ Our OS just got a lot more colorful. In this post, we figure out how to draw on 
 
 Thanks to Scott Spitler for suggesting this topic.
 
-## Timestamps
-
-TODO
-
 ## Steps to Reproduce
 
 1. Clone the repo: `git clone https://github.com/pagekeysolutions/pkos`
@@ -30,9 +26,14 @@ TODO
 
 5. Run the OS on QEMU: `docker-compose up`
 
+## Code
+
+- [Link to tag](https://github.com/pagekeysolutions/pkos/releases/tag/vid%2Fos015)
+- [Diff from previous video](https://github.com/pagekeysolutions/pkos/compare/vid/os014..vid/os015)
+
 ## Background
 
-VGA stands for Video Graphics Array [^1]. Designed for use with CRT monitors, this old-fashioned video display chipset doesn't support digital monitors. It has been replaced by DVI, or Digital Video Interface [^2]. As it turns out, the HDMI standard is just DVI with better color support and audio bundled into the same (smaller) connector [^3].
+VGA stands for Video Graphics Array [^1]. Designed for use with CRT monitors, this old-fashioned video display chipset uses an analog signal. It has been replaced by DVI, or Digital Video Interface [^2]. As it turns out, the HDMI standard is just DVI with better color support and audio bundled into the same (smaller) connector [^3].
 
 ## QEMU Hardware
 
