--- a/projects/pkos/015.md
+++ b/projects/pkos/015.md
@@ -14,6 +14,20 @@ Our OS just got a lot more colorful. In this post, we figure out how to draw on 
 
 Thanks to Scott Spitler for suggesting this topic.
 
+## Timestamps
+
+- 0:00 Intro
+- 0:35 Demo (Emulated)
+- 1:04 Demo (Real hardware)
+- 2:04 VGA Background
+- 2:34 QEMU Hardware
+- 3:27 VGA Hardware
+- 4:52 Setting the Graphics Mode
+- 5:57 CODE WALKTHROUGH
+- 9:28 Stuck in VGA Mode
+- 11:30 Other lessons learned
+- 12:17 Outro
+
 ## Steps to Reproduce
 
 1. Clone the repo: `git clone https://github.com/pagekeysolutions/pkos`
