Add YouTube link to PKOS 15

--- a/projects/pkos/015.md
+++ b/projects/pkos/015.md
@@ -1,7 +1,7 @@
 ---
 slug: 15
 title: "OS15: Writing a Simple VGA Driver (Bare-Metal Graphics)"
-youtube: 
+youtube: GllPGcVLEDY
 ---
 
 import YouTubePlayer from '@site/src/components/YouTubePlayer';
