--- a/rust-sr/5.md
+++ b/rust-sr/5.md
@@ -2,8 +2,8 @@
 title: "3.4 Comments | Rust Book Speedrun 5"
 date: "2023-02-28"
 authors: [steve]
-youtube: 801vZfECU6Y
-path: /blog/rust-sr-4
+youtube: nzH0lTTTE5c
+path: /blog/rust-sr-5
 ---
 
 <YouTubePlayer youtubeLink={frontmatter.youtube} />
