Fill in project field for most posts

--- a/rust-sr/1.md
+++ b/rust-sr/1.md
@@ -3,6 +3,7 @@ title: "It has begun. | Rust Book Speedrun 1"
 date: "2023-02-18"
 authors: [steve]
 youtube: wS2IT-qgOhs
+project: rust-book-speedrun
 path: /blog/rust-sr-1
 ---
 
