--- a/rust-sr/3.md
+++ b/rust-sr/3.md
@@ -3,6 +3,7 @@ title: "3.2 Data Types | Rust Book Speedrun 3"
 date: "2023-02-25"
 authors: [steve]
 youtube: 2MB6H4n3rsA
+project: rust-book-speedrun
 path: /blog/rust-sr-3
 ---
 
