--- a/rust-sr/7.md
+++ b/rust-sr/7.md
@@ -3,6 +3,7 @@ title: "What is ownership? | Rust Book Speedrun 7"
 date: "2023-03-02"
 authors: [steve]
 youtube: jjG-2H_6WcY
+project: rust-book-speedrun
 path: /blog/rust-sr-7
 ---
 
