--- a/rust-sr/2.md
+++ b/rust-sr/2.md
@@ -3,6 +3,7 @@ title: "Variables & Mutability | Rust Book Speedrun 2"
 date: "2023-02-21"
 authors: [steve]
 youtube: F5Ni0Xa1bcE
+project: rust-book-speedrun
 path: /blog/rust-sr-2
 ---
 
