--- a/rust-sr/4.md
+++ b/rust-sr/4.md
@@ -3,6 +3,7 @@ title: "3.3 Functions | Rust Book Speedrun 4"
 date: "2023-02-27"
 authors: [steve]
 youtube: 801vZfECU6Y
+project: rust-book-speedrun
 path: /blog/rust-sr-4
 ---
 
