--- a/rust-sr/5.md
+++ b/rust-sr/5.md
@@ -3,6 +3,7 @@ title: "3.4 Comments | Rust Book Speedrun 5"
 date: "2023-02-28"
 authors: [steve]
 youtube: nzH0lTTTE5c
+project: rust-book-speedrun
 path: /blog/rust-sr-5
 ---
 
