--- a/rust-sr/6.md
+++ b/rust-sr/6.md
@@ -3,6 +3,7 @@ title: "3.5 Control Flow | Rust Book Speedrun 6"
 date: "2023-03-01"
 authors: [steve]
 youtube: Ditbk1RGIOM
+project: rust-book-speedrun
 path: /blog/rust-sr-6
 ---
 
