--- a/rust-sr/8.md
+++ b/rust-sr/8.md
@@ -3,6 +3,7 @@ title: "4.2 References & Borowing | Rust Book Speedrun 8"
 date: "2023-03-04"
 authors: [steve]
 youtube: OEes1K4U00c
+project: rust-book-speedrun
 path: /blog/rust-sr-8
 ---
 
