--- a/rust-sr/9.md
+++ b/rust-sr/9.md
@@ -3,6 +3,7 @@ title: "4.3 Slices | Rust Book Speedrun 9"
 date: "2023-03-05"
 authors: [steve]
 youtube: 1VN5akGJF2Y
+project: rust-book-speedrun
 path: /blog/rust-sr-9
 ---
 
