Add rust sr, python cli

--- a/en/docs/posts/2023/rust-sr/1.md
+++ b/en/docs/posts/2023/rust-sr/1.md
@@ -1,17 +1,20 @@
 ---
 title: "It has begun. | Rust Book Speedrun 1"
-date: "2023-02-18"
-authors: [steve]
-youtube: wS2IT-qgOhs
-project: rust-book-speedrun
-path: /blog/rust-sr-1
+date: 2023-02-18
+authors:
+  - steve
+categories:
+  - Rust Book Speedrun
+tags:
+  - rust
+slug: rust-sr-1
 ---
-
-<YouTubePlayer youtubeLink={frontmatter.youtube} />
 
 I have no choice. Join me on this journey of speedrunning The Rust Book.
 
-<!-- truncate -->
+<!-- more -->
+
+![type:video](https://www.youtube.com/embed/wS2IT-qgOhs)
 
 ### Timestamps
 
