--- a/en/docs/posts/2023/rust-sr/3.md
+++ b/en/docs/posts/2023/rust-sr/3.md
@@ -1,17 +1,20 @@
 ---
 title: "3.2 Data Types | Rust Book Speedrun 3"
-date: "2023-02-25"
-authors: [steve]
-youtube: 2MB6H4n3rsA
-project: rust-book-speedrun
-path: /blog/rust-sr-3
+date: 2023-02-25
+authors:
+  - steve
+categories:
+  - Rust Book Speedrun
+tags:
+  - rust
+slug: rust-sr-3
 ---
-
-<YouTubePlayer youtubeLink={frontmatter.youtube} />
 
 Data, data, data types, woohoo
 
-<!-- truncate -->
+<!-- more -->
+
+![type:video](https://www.youtube.com/embed/2MB6H4n3rsA)
 
 ### Timestamps
 
