Fix blog youtube video component

--- a/astrowind/src/content/post/blog/2017/hash-table-python/index.mdx
+++ b/astrowind/src/content/post/blog/2017/hash-table-python/index.mdx
@@ -16,7 +16,7 @@ This tutorial will show you how to implement a hash table with **separate chaini
 
 import BlogYoutubeVideo from '~/components/common/BlogYoutubeVideo.astro';
 
-<BlogYoutubeVideo videoId="zHi5v78W1f0" title='ye' />
+<BlogYoutubeVideo videoId="zHi5v78W1f0" />
 
 ## Background
 
