--- a/astrowind/src/content/post/blog/2017/hash-table-python/index.mdx
+++ b/astrowind/src/content/post/blog/2017/hash-table-python/index.mdx
@@ -1,14 +1,12 @@
 ---
 title: How to Implement a Hash Table in Python
-description: Implement a hash table with separate chaining.
 publishDate: 2017-11-24
-image: '/blog/2017/hash-table-python.jpg'
+image: /blog/2017/hash-table-python.jpg
 author: Steve Grice
 category: Data Structures & Algorithms
 tags:
   - python
   - tutorial
-# slug: hash-table
 ---
 
 
