--- a/astrowind/src/content/post/blog/2017/queue-python/index.mdx
+++ b/astrowind/src/content/post/blog/2017/queue-python/index.mdx
@@ -1,21 +1,15 @@
 ---
 title: How to Implement a Queue in Python
-date: 2017-06-23
-authors:
-  - steve
-categories:
-  - Data Structures & Algorithms
+publishDate: 2017-06-23
+image: /blog/2017/queue-python.jpg
+author: Steve Grice
+category: Data Structures & Algorithms
 tags:
   - python
   - tutorial
-slug: queue
 ---
 
-![One after the other...](queue.jpg)
-
 You may hate the line at the DMV, but without it, things might turn into a rough-and-tumble free for all! In the same way that a line keeps raging motorists from getting out of hand, a Queue helps your computer keep its ducks in a row. The Queue functions very much like a line of people. It's a First-In, First-Out (FIFO) data structure, so no cutting!
-
-<!-- more -->
 
 ## Starting Out
 
