--- a/astrowind/src/content/post/blog/2017/stack-python/index.mdx
+++ b/astrowind/src/content/post/blog/2017/stack-python/index.mdx
@@ -1,25 +1,21 @@
 ---
 title: How to Implement a Stack in Python
-date: 2017-06-22
-authors:
-  - steve
-categories:
-  - Data Structures & Algorithms
+publishDate: 2017-06-22
+image: /blog/2017/stack-python.jpg
+author: Steve Grice
+category: Data Structures & Algorithms
 tags:
   - python
   - tutorial
-slug: stack
 ---
-
-![Stack of rocks](stack.jpg)
 
 There's no other data structure like the Stack. In only a few minutes, you can have a fully working implementation that can be used to solve a wide variety of problems. Stacks are useful for anything from reversing a string to language processing applications - not to mention the fact that many programming languages (and probably your operating system) rely on a Stack to function.
 
-<!-- more -->
-
 **Click [here][stack-src] for the full Stack source code. Also, [here][stack-test] is the test code.**
 
-![type:video](https://www.youtube.com/embed/5MOy9VYKczY)
+import BlogYoutubeVideo from '~/components/common/BlogYoutubeVideo.astro';
+
+<BlogYoutubeVideo videoId="5MOy9VYKczY" />
 
 ## An Analogy
 
