--- a/astrowind/src/content/post/blog/2017/linked-lists-in-python/index.mdx
+++ b/astrowind/src/content/post/blog/2017/linked-lists-in-python/index.mdx
@@ -1,21 +1,15 @@
 ---
 title: How to Implement a Linked List in Python
-date: 2017-06-20
-authors:
-  - steve
-categories:
-  - Data Structures & Algorithms
+publishDate: 2017-06-20
+image: /blog/2017/linked-lists-in-python.jpg
+author: Steve Grice
+category: Data Structures & Algorithms
 tags:
   - python
   - tutorial
-slug: linked-list
 ---
 
-![Links of rope](linked-list.jpg)
-
 Need a quick run down on a classic data structure? Look no further.
-
-<!-- more -->
 
 **Click [here][list-src] for the full LinkedList source code. Also, [here][list-test] is the test code.**
 
@@ -25,7 +19,9 @@ The advantage to this approach is the dynamic nature of the list. Unless you run
 
 In this case, we will be talking about a **singly linked list**, meaning that each Node only has one reference, which belongs to the **next** Node. For a __doubly linked list__, there would be an additional reference to the **previous** Node.
 
-![type:video](https://www.youtube.com/embed/KZVU2X4Dw8w)
+import BlogYoutubeVideo from '~/components/common/BlogYoutubeVideo.astro';
+
+<BlogYoutubeVideo videoId="KZVU2X4Dw8w" />
 
 ## Nodes and Ropes
 
