Move over 2018 posts with no folder

--- a/astrowind/src/content/post/blog/2018/insertion-sort-python/insertion-sort-python.mdx
+++ b/astrowind/src/content/post/blog/2018/insertion-sort-python/insertion-sort-python.mdx
@@ -1,21 +1,18 @@
 ---
 title: "Insertion Sort in Python"
-date: 2018-10-13
-authors:
-  - steve
-categories:
-  - Data Structures & Algorithms
+publishDate: 2018-10-13
+author: Steve Grice
+category: Data Structures & Algorithms
 tags:
   - python
   - tutorial
-slug: insertion-sort
 ---
 
 In this video, we learn the ins and outs of Insertion Sort, a sorting algorithm that will come in handy in many situations. We go over theory, and then visualize the entire sorting process from start to finish.
 
-<!-- more -->
+import BlogYoutubeVideo from '~/components/common/BlogYoutubeVideo.astro';
 
-![type:video](https://www.youtube.com/embed/-wwk5QXk-AA)
+<BlogYoutubeVideo videoId="-wwk5QXk-AA" />
 
 The full implementation in Python can be found at the following link:
 
