--- a/astrowind/src/content/post/blog/2018/bubble-sort-python/bubble-sort-python.mdx
+++ b/astrowind/src/content/post/blog/2018/bubble-sort-python/bubble-sort-python.mdx
@@ -1,21 +1,18 @@
 ---
 title: "Bubble Sort in Python"
-date: 2018-10-05
-authors:
-  - steve
-categories:
-  - Data Structures & Algorithms
+publishDate: 2018-10-05
+author: Steve Grice
+category: Data Structures & Algorithms
 tags:
   - python
   - tutorial
-slug: bubble-sort
 ---
 
 In this video, we learn the ins and outs of Bubble Sort, a sorting algorithm that will come in handy in many situations. Well, maybe just in your programming classes.
 
-<!-- more -->
+import BlogYoutubeVideo from '~/components/common/BlogYoutubeVideo.astro';
 
-![type:video](https://www.youtube.com/embed/LmZLKhd2Juc)
+<BlogYoutubeVideo videoId="LmZLKhd2Juc" />
 
 We go over theory, and then visualize the entire sorting process from start to finish.
 
