--- a/astrowind/src/content/post/blog/2018/merge-sort/merge-sort.mdx
+++ b/astrowind/src/content/post/blog/2018/merge-sort/merge-sort.mdx
@@ -1,21 +1,18 @@
 ---
 title: "Merge Sort in Python"
-date: 2018-09-28
-authors:
-  - steve
-categories:
-  - Data Structures & Algorithms
+publishDate: 2018-09-28
+author: Steve Grice
+category: Data Structures & Algorithms
 tags:
   - python
   - tutorial
-slug: merge-sort
 ---
 
 In this video, we learn the ins and outs of Merge Sort, a sorting algorithm that will come in handy in many situations.  We go over theory, and then visualize the entire sorting process from start to finish.
 
-<!-- more -->
+import BlogYoutubeVideo from '~/components/common/BlogYoutubeVideo.astro';
 
-![type:video](https://www.youtube.com/embed/syHhPKK00Rc)
+<BlogYoutubeVideo videoId="syHhPKK00Rc" />
 
 The full implementation in Python can be found at the following link:
 
