--- a/astrowind/src/content/post/blog/2018/quicksort-python/quicksort-python.mdx
+++ b/astrowind/src/content/post/blog/2018/quicksort-python/quicksort-python.mdx
@@ -1,21 +1,18 @@
 ---
 title: "Quicksort in Python"
-date: 2018-09-23
-authors:
-  - steve
-categories:
-  - Data Structures & Algorithms
+publishDate: 2018-09-23
+author: Steve Grice
+category: Data Structures & Algorithms
 tags:
   - python
   - tutorial
-slug: quicksort
 ---
 
 In this video, we learn the ins and outs of Quicksort, a sorting algorithm that will come in handy in many situations. We go over theory, and then visualize the entire sorting process from start to finish.
 
-<!-- more -->
+import BlogYoutubeVideo from '~/components/common/BlogYoutubeVideo.astro';
 
-![type:video](https://www.youtube.com/embed/OSD4b-ih6Kc)
+<BlogYoutubeVideo videoId="OSD4b-ih6Kc" />
 
 We cover the quicksort method in general, as well as two partition schemes: Lomuto and Hoare methods.
 
