--- a/astrowind/src/content/post/blog/2018/creativity-language-learning/index.mdx
+++ b/astrowind/src/content/post/blog/2018/creativity-language-learning/index.mdx
@@ -1,19 +1,15 @@
 ---
 title: Is creativity the key to language learning?
-date: 2018-11-12
-authors:
-  - steve
+publishDate: 2018-11-12
+image: /blog/2018/creativity-language-learning.jpg
+author: Steve Grice
 tags:
   - language
   - ideas
 path: creativity-language-learning/
 ---
 
-![Hands on a piano](piano.jpeg)
-
 The way people learn languages is an intriguing topic. We have plenty of resources available online to help us, but I’m most interested in the answer to one question: **how can we improve upon what we already have?** The future of language learning is more than the flashcard-esque fill-in-the-blank learning systems that have become all too common. The ideal site is one that challenges the user, and asks him or her to create something new with their target language. Language learning is about finding new ways to communicate, and **creation is the highest form of communication.**
-
-<!-- more -->
 
 I love DuoLingo — I used it extensively when learning Russian and Spanish, working my way through both courses in their entirety. I learned a ton of new words and phrases, and it kept me on track even when I didn’t want to study. It’s beautifully simple — open your phone, at any time of day, and learn something new.
 
