--- a/astrowind/src/content/post/blog/2018/linux-kernel-1/index.mdx
+++ b/astrowind/src/content/post/blog/2018/linux-kernel-1/index.mdx
@@ -1,23 +1,17 @@
 ---
 title: How to Compile the Linux Kernel from Source
-date: 2018-03-03
-authors:
-  - steve
-categories:
-  - Linux Kernel Series
+publishDate: 2018-03-03
+image: /blog/2018/linux-kernel-1.jpg
+author: Steve Grice
+category: Linux Kernel Series
 tags:
   - linux
   - tutorial
-slug: linux-kernel-1
 ---
-
-![Kernels... Kernels everywhere!](kernels.jpg)
 
 Linux is everywhere, and there are plenty of Linux distributions available providing great out-of-the-box features. But what happens when you need to make an intricate, low-level change to system functionality? What if you wanted to get into kernel development and start to understand one of the world's largest open source projects?
 
 The first step to doing all of these things is compiling the Linux kernel from source. While it may seem tedious or trivial at first, this process will get you down in the weeds of the OS, allowing you to turn modules on or off, search for kernel features, and even examine (and if you're brave, tweak) the raw source code that runs everything on your Linux machine!
-
-<!-- more -->
 
 **This post is Part 1 of a series on the Linux kernel.**
 
@@ -162,6 +156,6 @@ In an even [later article][part3], we'll be creating a basic kernel module.
 
 **Part 1 - [Part 2][part2] - [Part 3][part3]**
 
-[part1]: ../linux-kernel-1/index.md
-[part2]: ../linux-kernel-2/index.md
-[part3]: ../linux-kernel-3/index.md
+[part1]: ./linux-kernel-1/
+[part2]: ./linux-kernel-2/
+[part3]: ./linux-kernel-3/
