--- a/astrowind/src/content/post/blog/2018/linux-kernel-3/index.mdx
+++ b/astrowind/src/content/post/blog/2018/linux-kernel-3/index.mdx
@@ -1,17 +1,13 @@
 ---
 title: Writing Your First Kernel Module
-date: 2018-03-29
-authors:
-  - steve
-categories:
-  - Linux Kernel Series
+publishDate: 2018-03-29
+image: /blog/2018/linux-kernel-3.jpg
+author: Steve Grice
+category: Linux Kernel Series
 tags:
   - linux
   - tutorial
-slug: linux-kernel-3
 ---
-
-![Hands putting jigsaw pieces together](hands-jigsaw.jpg)
 
 So we've already [built the kernel from source][part1] and even [modified the source code][part2]. While these were some pretty cool parlor tricks, isn't it about time we learned something useful?
 
@@ -20,8 +16,6 @@ Well, I can't promise *that*, but today we'll take a step in the right direction
 The Linux kernel is structured so that you can add extended functionality without modifying the core source. These added *modules* can be linked in as the source is compiled or added dynamically. The one we write today will be inserted dynamically, adding itself and running without a system reboot.
 
 While writing a kernel module is definitely safer than modifying the source, it can still mess up your system a lot more than a user space application, so proceed with caution.
-
-<!-- more -->
 
 **This post is Part 3 of a series on the Linux kernel.**
 
@@ -100,14 +94,14 @@ sudo insmod hello-world.ko
 
 If no errors are present, it must have worked. Verify this by typing `dmesg` to show kernel messages. In my case, it looked something like this:
 
-![dmesg with Hello](dmesg1.png)
+![dmesg with Hello](./dmesg1.png)
 <figcaption>Who said that?</figcaption>
 
 That worked well enough! Try out `modinfo hello-world.ko` to see some more generic information about the module you just made.
 
 Okay, that's enough fun for one day. Let's rip that thing back out of the kernel. Type: `sudo rmmod hello-world.ko` and check `dmesg` again:
 
-![dmesg with Hello and Goodbye](dmesg2.png)
+![dmesg with Hello and Goodbye](./dmesg2.png)
 <figcaption>You say goodbye... And I say hello.</figcaption>
 
 How beautiful! Our module's circle of life is complete. They sure do grow up fast.
@@ -131,6 +125,6 @@ All in all, we didn't break any records, but it was a good start to writing kern
 
 **[Part 1][part1] - [Part 2][part2] - Part 3**
 
-[part1]: ../linux-kernel-1/index.md
-[part2]: ../linux-kernel-2/index.md
-[part3]: ../linux-kernel-3/index.md
+[part1]: ./linux-kernel-1/
+[part2]: ./linux-kernel-2/
+[part3]: ./linux-kernel-3/
