--- a/astrowind/src/content/post/blog/2018/push-ssh-keys/index.mdx
+++ b/astrowind/src/content/post/blog/2018/push-ssh-keys/index.mdx
@@ -1,22 +1,17 @@
 ---
 title: Push Out Your SSH Keys - Jump Nodes in a Jiffy!
-date: 2018-04-16
-authors:
-  - steve
+publishDate: 2018-04-16
+image: /blog/2018/push-ssh-keys.jpg
+author: Steve Grice
 tags:
   - tutorial
-slug: push-ssh-keys
 ---
-
-![Man doing a backflip](backflip.jpg)
 
 Every day, system administrators, students, professors, and everyday computer users struggle with entering their password on the command line. With each passing jump from one system to another, ten seconds tick by. Whoops, that's a mistake - make it 30!
 
 Over time, entering your password every time you want to move between nodes using SSH can become a real hassle. The benefits from "pushing out" your SSH keys, or making all of the nodes you typically jump to trust your public key, will save you more time with every use, snowballing from seconds, to minutes, to hours!
 
 This article describes two ways of pushing out your keys: The easy way, and the hard way.
-
-<!-- more -->
 
 *Photo by [Oliver Sjöström](https://www.pexels.com/photo/man-wearing-blue-shorts-about-to-dive-on-body-of-water-1098365/)*
 
@@ -116,4 +111,4 @@ All done! Wasn't that easy?
 
 That's all for this quick SSH tip. If you liked this article, have comments or concerns, or just want to express yourself, leave a comment below. Check out some of the other articles on this blog for more technical info, or even try [our YouTube channel][youtube-channel] on for size. Thanks for reading!
 
-[youtube-channel]: https://www.youtube.com/channel/UCNlWYe5_RcwWTrLP8m1oidw
+[youtube-channel]: https://youtube.com/@PageKey
