--- a/astrowind/src/content/post/blog/2018/design-vs-implementation/index.mdx
+++ b/astrowind/src/content/post/blog/2018/design-vs-implementation/index.mdx
@@ -1,18 +1,13 @@
 ---
 title: 'Design vs. Implementation: The Eternal Divide'
-date: 2018-12-12
-authors:
-  - steve
+publishDate: 2018-12-12
+image: /blog/2018/design-vs-implementation.jpg
+author: Steve Grice
 tags:
   - ideas
-slug: design-vs-implementation
 ---
 
-![Brushes in front of a blank canvas](design-vs-implementation.jpg)
-
 Typically, people don't go about their day thinking about design and implementation, or at least not in these terms. Such words are usually limited to the vocabulary of engineers, programmers, developers, or project managers. In spite of this, these two concepts can apply to just about everything in your daily life. Learning to think in these terms may give you a new perspective.
-
-<!-- more -->
 
 Though the terminology is unorthodox, design and implementation can easily be applied to the process of writing. Whenever I'm putting together an article, essay, story, or document, I find myself performing design and implementation as two distinct activities, whether I attempt to separate them or not. Design is figuring out which ideas I would like to convey, how I want to convey them, and what the feel should be - it's the big picture. **Outlining** is a design activity that really helps me bring my writing together.
 
