--- a/astrowind/src/content/post/blog/2019/pkos-1/pkos-1.mdx
+++ b/astrowind/src/content/post/blog/2019/pkos-1/pkos-1.mdx
@@ -1,20 +1,17 @@
 ---
 title: "OS1: Installing VirtualBox and Debian"
-date: 2019-12-23
-authors:
-  - steve
-categories:
-  - PageKey Operating System
+publishDate: 2019-12-23
+author: Steve Grice
+category: PageKey Operating System
 tags:
   - tutorial
-slug: pkos-1
 ---
 
 In this video, we'll set up VirtualBox and install a Debian VM so that we can use Linux on Windows.
 
-<!-- more -->
+import BlogYoutubeVideo from '~/components/common/BlogYoutubeVideo.astro';
 
-![type:video](https://www.youtube.com/embed/NtZzb9ZJ5Fo)
+<BlogYoutubeVideo videoId="NtZzb9ZJ5Fo" />
 
 ## Code
 
